# c7x_vxlib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  makefile.am275x.c75x.ti-c7000  makefile.am62dx.c75x.ti-c7000
.project/: project.js  project_am275x.js  project_am62dx.js
cmake/: clang-format.cmake  doxygen.cmake  username.cmake  utils.cmake
docs/: VXLIB_main_manifest.html  VXLIB_manifest.html  VXLIB_release_notes.html
docs/doxygen/: doxyfile_datasheet  doxyfile_design  doxyfile_user_guide  layout_datasheet.xml  layout_design.xml  layout_user_guide.xml
examples/: CMakeLists.txt
examples/VXLIB_absDiff/: VXLIB_absDiff_example.cpp
examples/VXLIB_accumulateImage/: VXLIB_accumulateImage_example.cpp
examples/VXLIB_accumulateSquareImage/: VXLIB_accumulateSquareImage_example.cpp
examples/VXLIB_accumulateWeightImage/: VXLIB_accumulateWeightImage_example.cpp
examples/VXLIB_addSquare/: VXLIB_addSquare_example.cpp
examples/VXLIB_addWeight/: VXLIB_addWeight_example.cpp
examples/VXLIB_and/: VXLIB_and_example.cpp
examples/VXLIB_box/: VXLIB_box_example.cpp
examples/VXLIB_convertDepth/: VXLIB_convertDepth_example.cpp
examples/VXLIB_convolve/: VXLIB_convolve_example.cpp
examples/VXLIB_dilate/: VXLIB_dilate_example.cpp
examples/VXLIB_gaussian/: VXLIB_gaussian_example.cpp
examples/VXLIB_halfScaleGaussian/: VXLIB_halfScaleGaussian_example.cpp
examples/VXLIB_histogram/: VXLIB_histogram_example.cpp
examples/VXLIB_magnitude/: VXLIB_magnitude_example.cpp
examples/VXLIB_meanStdDev/: VXLIB_meanStdDev_example.cpp
examples/VXLIB_median/: VXLIB_median_example.cpp
examples/VXLIB_minMaxLoc/: VXLIB_minMaxLoc_example.cpp
examples/VXLIB_multiply/: VXLIB_multiply_example.cpp
examples/VXLIB_normL1/: VXLIB_normL1_example.cpp
examples/VXLIB_normL2/: VXLIB_normL2_example.cpp
examples/VXLIB_not/: VXLIB_not_example.cpp
examples/VXLIB_or/: VXLIB_or_example.cpp
examples/VXLIB_subtract/: VXLIB_subtract_example.cpp
examples/VXLIB_tableLookup/: VXLIB_tableLookup_example.cpp
examples/VXLIB_thresholdBinary/: VXLIB_thresholdBinary_example.cpp
examples/VXLIB_thresholdRange/: VXLIB_thresholdRange_example.cpp
examples/VXLIB_xor/: VXLIB_xor_example.cpp
src/: vxlib.h
src/VXLIB_absDiff/: VXLIB_absDiff.cpp  VXLIB_absDiff.h  VXLIB_absDiff_ci.cpp  VXLIB_absDiff_cn.cpp  VXLIB_absDiff_priv.h
src/VXLIB_accumulateImage/: VXLIB_accumulateImage.cpp  VXLIB_accumulateImage.h  VXLIB_accumulateImage_priv.h
src/VXLIB_accumulateSquareImage/: VXLIB_accumulateSquareImage.cpp  VXLIB_accumulateSquareImage.h  VXLIB_accumulateSquareImage_priv.h
src/VXLIB_accumulateWeightImage/: VXLIB_accumulateWeightImage.cpp  VXLIB_accumulateWeightImage.h  VXLIB_accumulateWeightImage_priv.h
src/VXLIB_add/: VXLIB_add.cpp  VXLIB_add.h  VXLIB_add_ci.cpp  VXLIB_add_cn.cpp  VXLIB_add_priv.h
src/VXLIB_addSquare/: VXLIB_addSquare.cpp  VXLIB_addSquare.h  VXLIB_addSquare_ci.cpp  VXLIB_addSquare_cn.cpp  VXLIB_addSquare_priv.h
src/VXLIB_addWeight/: VXLIB_addWeight.cpp  VXLIB_addWeight.h  VXLIB_addWeight_ci.cpp  VXLIB_addWeight_cn.cpp  VXLIB_addWeight_priv.h
src/VXLIB_and/: VXLIB_and.cpp  VXLIB_and.h  VXLIB_and_ci.cpp  VXLIB_and_cn.cpp  VXLIB_and_priv.h
src/VXLIB_box/: VXLIB_box.cpp  VXLIB_box.h  VXLIB_box_ci.cpp  VXLIB_box_cn.cpp  VXLIB_box_priv.h
src/VXLIB_convertDepth/: VXLIB_convertDepth.cpp  VXLIB_convertDepth.h  VXLIB_convertDepth_ci.cpp  VXLIB_convertDepth_cn.cpp  VXLIB_convertDepth_priv.h
src/VXLIB_convolve/: VXLIB_convolve.cpp  VXLIB_convolve.h  VXLIB_convolve_ci.cpp  VXLIB_convolve_cn.cpp  VXLIB_convolve_priv.h
src/VXLIB_dilate/: VXLIB_dilate.cpp  VXLIB_dilate.h  VXLIB_dilate_ci.cpp  VXLIB_dilate_cn.cpp  VXLIB_dilate_priv.h
src/VXLIB_gaussian/: VXLIB_gaussian.cpp  VXLIB_gaussian.h  VXLIB_gaussian_ci.cpp  VXLIB_gaussian_cn.cpp  VXLIB_gaussian_priv.h
src/VXLIB_halfScaleGaussian/: VXLIB_halfScaleGaussian.cpp  VXLIB_halfScaleGaussian.h  VXLIB_halfScaleGaussian_ci.cpp  VXLIB_halfScaleGaussian_cn.cpp  VXLIB_halfScaleGaussian_priv.h
src/VXLIB_histogram/: VXLIB_histogram.cpp  VXLIB_histogram.h  VXLIB_histogram_ci.cpp  VXLIB_histogram_cn.cpp  VXLIB_histogram_priv.h  VXLIB_histogram_scalar.cpp
src/VXLIB_magnitude/: VXLIB_magnitude.cpp  VXLIB_magnitude.h  VXLIB_magnitude_ci.cpp  VXLIB_magnitude_cn.cpp  VXLIB_magnitude_priv.h
src/VXLIB_meanStdDev/: VXLIB_meanStdDev.cpp  VXLIB_meanStdDev.h  (+3 more)
test/: CMakeLists.txt
(+393 files in other folders)
